# seam

./: .gitignore  Cargo.toml  README.md  USAGE.md  test-css.sex  test.html  test.sex
crates/seam/: Cargo.toml
crates/seam/src/: bin.rs  lib.rs  tests.rs
crates/seam/src/assemble/: html.rs  mod.rs  sexp.rs
crates/seam/src/parse/: expander.rs  lexer.rs  macros.rs  mod.rs  parser.rs  tokens.rs
crates/seam_argparse_proc_macro/: Cargo.toml
crates/seam_argparse_proc_macro/src/: lib.rs
samples/: css-concept.sex  html-document-1.sex  js-concept.sex  json-example.sex  xml-example-1.sex  xml-example-2.sex  xml-schema.sex
samples/blog-concept/: index.sex
samples/blog-concept/blog/: Entry 1.sex  Entry 2.sex
samples/blog-concept/blog/includes/: footer.sex  head.sex  header.sex  style.sex
samples/tests/: html-test-1-2024-06-28.html  html-test-1.sex  html-test-2.sex  test-css.sex
src/: bin.rs  lib.rs
src/assemble/: css.rs  html.rs  mod.rs  sexp.rs  text.rs  xml.rs
src/parse/: expander.rs  lexer.rs  mod.rs  parser.rs  tokens.rs
src/seam_argparse_proc_macro/: lib.rs
