[package]
name = "seam"
description = "Symbolic Expressions As Markup."
keywords = ["markup", "lisp", "macro", "symbolic-expression", "sexp"]
license-file = "LICENSE"
homepage = "https://git.knutsen.co/seam"
version = "0.2.1"
authors = ["Demonstrandum <samuel@knutsen.co>"]
edition = "2021"

[features]
default = ["debug"]
debug = []

[lib]
name = "seam"
path = "src/lib.rs"

[[bin]]
name = "seam"
path = "src/bin.rs"

[dependencies]
colored = "2.1"
chrono = "0.4"
unicode-width = "0.1.12"
descape = "1.1.2"
