[package]
name = "seam"
description = "Symbolic Expressions As Markup."
keywords = ["markup", "lisp", "macro", "symbolic-expression", "sexp"]
license-file = "../../LICENSE"
readme = "../../README.md"
homepage = "https://git.knutsen.co/seam"
version = "0.3.1"
authors = ["Demonstrandum <samuel@knutsen.co>"]
edition = "2021"

[features]
# default = ["debug"]
debug = []

[lib]
name = "seam"
path = "src/lib.rs"

[[bin]]
name = "seam"
path = "src/bin.rs"

[dependencies]
seam_argparse_proc_macro = { version = "0.1.0", path = "../seam_argparse_proc_macro" }
colored = "2.1"
chrono = "0.4"
unicode-width = "0.2.0"
descape = "2.0.3"
formatx = "0.2.2"
regex = "1.10.5"
